[package]
name = "betris"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_matchbox = "0.10.0"
bincode = "1.3.3"
clap = { version = "4.5.19", features = ["derive"] }
if_chain = "1.0.2"
once_cell = "1.20.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.bevy]
version = "0.13.2"
