[package]
name = "tetris-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tetris-schema = { version = "0.1.0", path = "../schema" }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
